[tool.poetry]
name = "c-bank"
version = "0.1.0"
description = ""
authors = ["egor <shievanov@bk.ru>"]
readme = "README.md"
packages = [{include = "c_bank"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest = "^7.4.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
